setup custom event to listen to browser events and fix layout issue when toggling browser nav bar

--- a/src/ensembl/src/content/app/browser/browser-image/BrowserImage.scss
+++ b/src/ensembl/src/content/app/browser/browser-image/BrowserImage.scss
@@ -2,6 +2,10 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+
+  &.shorter {
+    height: calc(100% - 56px);
+  }
 }
 
 .browserInnerWrapper {
